--- a/opera.yml
+++ b/opera.yml
@@ -1,17 +1,12 @@
 ---
-- name: Instalar o Opera Browser no Windows
-  hosts: all
-  gather_facts: no
+- hosts: all
+  become: true
   tasks:
-    - name: Download do instalador do Opera
-      win_get_url:
-        url: "https://download.opera.com/download/get/?partner=www&opsys=Windows"
-        dest: C:\01_disco\opera_installer.exe
-
-    - name: Instalar o Opera
-      win_command: C:\01_disco\opera_installer.exe /silent
-
-    - name: Remover o instalador do Opera
-      win_file:
-        path: C:\01_disco\opera_installer.exe
-        state: absent
+    - name: Instalar o browser Opera
+      win_package:
+        name: opera
+        state: present
+  handlers:
+    - name: Reiniciar o computador
+      win_reboot:
+        force: yes
