--- a/opera.yml
+++ b/opera.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Opera browser on Windows
-  hosts: windows_hosts
+  hosts: 
   gather_facts: false
   tasks:
     - name: Download Opera installer
